# Meeting_room

./: docker-compose.yml  package.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_user_table.rs  m20251225_104108_create_rooms_table.rs  m20251225_110041_update_user_table.rs  m20251225_162920_create_organizations_table.rs  m20251225_163020_create_organization_members_table.rs  m20251225_163045_create_rooms_table.rs  m20251225_163109_create_bookings_table.rs  m20251225_163141_create_booking_members_table.rs
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  booking_members.rs  bookings.rs  mod.rs  organization_members.rs  organizations.rs  room.rs  rooms.rs  stronghold_key.rs  user.rs  users.rs
src-tauri/src/entity/: booking_members.rs  bookings.rs  mod.rs  organization_members.rs  organizations.rs  prelude.rs  room.rs  rooms.rs  user.rs  users.rs
src-tauri/src/enums/: mod.rs  organization_roles.rs  role.rs  roles.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/inputs/: booking_members.rs  bookings.rs  login.rs  mod.rs  organization_members.rs  organizations.rs  register.rs  room.rs  rooms.rs
src-tauri/src/models/: room.rs  user.rs
src-tauri/src/responses/: auth.rs  booking_members.rs  bookings.rs  mod.rs  organization_members.rs  organizations.rs  rooms.rs  text.rs  users.rs
src-tauri/src/services/: auth.rs  booking_members.rs  bookings.rs  mod.rs  organization_members.rs  organizations.rs  room.rs  user.rs
src-tauri/src/utils/: email.rs  hash.rs  jwt.rs  mod.rs  validator.rs
src/components/: logo.tsx  register-form.tsx
src/components/auth/: login-form.tsx  register-form.tsx
src/components/calendar/: calendar-context.tsx  calendar-event.tsx  calendar-mode-icon-map.tsx  calendar-provider.tsx  calendar-tailwind-classes.ts  calendar.tsx
src/components/calendar/dialog/: calendar-manage-event-dialog.tsx  (+1 more)
src/components/form/: date-range-time-picker.tsx
src/components/side-bar/: app-sidebar.tsx  nav-user.tsx
src/constants/: nav.constants.ts
src/pages/: Home.tsx
src/pages/auth/: Login.tsx  Register.tsx
src/types/: auth.d.ts  nav.d.ts
src/utils/: store.ts  token.ts
types/: ErrorResponse.d.ts
types/enums/: OrganizationRole.d.ts
types/input/: LoginInput.d.ts
types/inputs/: CreateBookingInput.d.ts  CreateBookingMemberInput.d.ts  CreateOrganizationInput.d.ts  CreateOrganizationMemberInput.d.ts  CreateRoomInput.d.ts  RegisterInput.d.ts  UpdateBookingInput.d.ts  UpdateOrganizationInput.d.ts  UpdateOrganizationMemberInput.d.ts  UpdateRoomInput.d.ts
types/models/: User.d.ts
types/responses/: AuthResponse.d.ts  Booking.d.ts  BookingMembers.d.ts  Organization.d.ts  OrganizationMembers.d.ts  Response.d.ts  Room.d.ts
(+2 files in other folders)
