[package]
name = "meeting_room"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meeting_room_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "11.1.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
sea-orm-migration = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-stronghold = "2"
keyring = "3.6.3"
rand = "0.9.2"
base64 = "0.22"
tauri-plugin-store = "2"
